--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Sekolah XYZ - Home</title>
+    <title>Sekolah Smk  - Home</title>
 </head>
 <body>
     <header>
-        <h1>Sekolah SMKN 2 BANGAKALAN</h1>
+        <h1>Sekolah SMKN 2 BANGKALAN</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
