memodifikasi dan menambahkan fitur jurusan

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Sekolah Smk  - Home</title>
+    <title>website sekolah</title>
 </head>
 <body>
     <header>
@@ -31,7 +31,50 @@
             <li>Mendorong kreativitas dan inovasi dalam setiap aspek pendidikan.</li>
             <li>Menumbuhkan sikap tanggung jawab dan integritas dalam siswa.</li>
         </ul>
-    </section>
+   </section>
+    
+        <section id="jurusan">
+            <h2>Jurusan</h2>
+            <ul>
+                <li>
+                    <h3>Rekayasa Perangkat Lunak (RPL)</h3>
+                    <p>Menyediakan pembelajaran tentang pengembangan perangkat lunak dan aplikasi.</p>
+                </li>
+                <li>
+                    <h3>Teknik Komputer dan Jaringan (TKJ)</h3>
+                    <p>Memfokuskan pada jaringan komputer, administrasi sistem, dan keamanan informasi.</p>
+                </li>
+                <li>
+                    <h3>Teknik Pemesinan (TPM)</h3>
+                    <p>Memberikan pemahaman tentang proses pemesinan dan teknologi manufaktur.</p>
+                </li>
+                <li>
+                    <h3>Teknik Bisnis Sepeda Motor (TBSM)</h3>
+                    <p>Menyediakan keterampilan bisnis khusus dalam industri sepeda motor.</p>
+                </li>
+                <li>
+                    <h3>Desain Permodelan dan Informasi Bangunan (DPIB)</h3>
+                    <p>Mengajarkan konsep desain dan informasi bangunan.</p>
+                </li>
+                <li>
+                    <h3>Teknik Instalasi Tenaga Listrik (TITL)</h3>
+                    <p>Memahami teknik instalasi tenaga listrik dan sistem kelistrikan.</p>
+                </li>
+                <li>
+                    <h3>Kimia Industri (KI)</h3>
+                    <p>Menyediakan pemahaman tentang proses kimia dalam industri.</p>
+                </li>
+                <li>
+                    <h3>Teknik Elektronika Industri (TEI)</h3>
+                    <p>Fokus pada teknik elektronika yang digunakan dalam industri.</p>
+                </li>
+                <li>
+                    <h3>Teknik Kendaraan Ringan Otomotif (TKRO)</h3>
+                    <p>Mengajarkan teknik perawatan dan perbaikan kendaraan ringan.</p>
+                </li>
+            </ul>
+        </section>
+    
 
     <footer>
         <p>&copy; 2023 Sekolah SMKN 2 BANGKALAN. All rights reserved.</p>
