--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Sekolah SMKN 2 BANGKALAN</h1>
+        <h1>SMK NEGERI 2 BANGKALAN</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
