menambahkan logo sekolah

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     <header>
+        <div class="logo">
+            <!-- Let's assume your school logo is named "logo.png" -->
+            <img
+              src="Logo SMKN 2 Background Transparant.png"
+              height="150px"
+              alt="School Logo"
+            />
+          </div>
         <h1>SMK NEGERI 2 BANGKALAN</h1>
         <nav>
             <ul>
