menambahkan link url css

--- a/kontak.html
+++ b/kontak.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styeles.css" />
     <title>wibsite sekolah-kontak</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>SMK NEGERI 2 BANGKALAN</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="jurusan.html">Jurusan</a></li>
-                <li><a href="kontak.html">Kontak</a></li>
-            </ul>
-        </nav>
+      <h1>SMK NEGERI 2 BANGKALAN</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="jurusan.html">Jurusan</a></li>
+          <li><a href="kontak.html">Kontak</a></li>
+        </ul>
+      </nav>
     </header>
     <section id="kontak">
-        <h2>Kontak</h2>
-        <label for="nama">Nama:</label>
-        <input type="text" id="nama" name="nama" placeholder="Masukkan nama...">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" placeholder="Masukkan email...">
-        <label for="pesan">Pesan:</label>
-        <textarea id="pesan" name="pesan" placeholder="Tulis pesan..."></textarea>
-        <button type="submit">Kirim</button>
+      <h2>Kontak</h2>
+      <label for="nama">Nama:</label>
+      <input type="text" id="nama" name="nama" placeholder="Masukkan nama..." />
+      <label for="email">Email:</label>
+      <input
+        type="email"
+        id="email"
+        name="email"
+        placeholder="Masukkan email..."
+      />
+      <label for="pesan">Pesan:</label>
+      <textarea id="pesan" name="pesan" placeholder="Tulis pesan..."></textarea>
+      <button type="submit">Kirim</button>
     </section>
 
     <footer>
-        <p>&copy; 2023 Sekolah SMKN 2 BANGKALAN. All rights reserved.</p>
+      <p>&copy; 2023 Sekolah SMKN 2 BANGKALAN. All rights reserved.</p>
     </footer>
-</body>
+  </body>
 </html>
