--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             />
           </div>
         <h1>SMK NEGERI 2 BANGKALAN</h1>
+        <h2>Jl. Halim Perdana kusuma (Ring Road) Bangkalan</h2>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
